# comfyui_snacknodes

./: .gitignore  MANIFEST.in  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  publish_action.yml
comfyui_snacknodes/: __init__.py
comfyui_snacknodes/config/: constants.py
comfyui_snacknodes/nodes/: __init__.py
config/: __init__.py  constants.py
custom_nodes/comfyui_snacknodes/: .gitignore
docs/: README.md  readme.zh-cl.md
examples/: basic_usage.py
nodes/: __init__.py  base_node.py  image_info.py  image_scaler.py
nodes/common/: __init__.py  base_node.py
nodes/feature/: __init__.py  text_box.py  text_processor.py
nodes/images/: image_info.py  image_scaler.py
scripts/: create_icon.py
src/: __init__.py
src/comfyui_snacknodes/: __init__.py  image_nodes.py  nodes.py
src/comfyui_snacknodes/config/: constants.py
src/comfyui_snacknodes/nodes/: __init__.py  image_info.py  image_scaler.py  images.py
src/comfyui_snacknodes/utils/: __init__.py  image_utils.py
src/nodes/: __init__.py
src/nodes/common/: base_node.py
src/nodes/feature/: text_processor.py
src/nodes/images/: __init__.py  image_scaler.py
src/utils/: image_utils.py
src/web/js/: text_processor.js
tests/: __init__.py  test_comfyui_snacknodes.py
utils/: __init__.py  image_utils.py
web/: __init__.py  image_info.js  js_index.js
web/js/: imageSelector.js
