# pyproject.toml
[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_snacknodes"
description = "A comprehensive collection of ComfyUI nodes designed to reduce reliance on multiple third-party node packages."
version = "1.0.0"
authors = [
    {name = "linksluckytime", email = "linksluckytime@gmail.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
dependencies = [
    "torch",
    "numpy",
    "pillow",
    "opencv-python-headless"
]

[project.urls]
Repository = "https://github.com/linksluckytime/comfyui_snacknodes"

[tool.setuptools]
packages = ["nodes", "utils", "config"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.json"]
"comfyui_snacknodes" = ["web/*"]

[tool.comfy]
PublisherId = "linksluckytime"
DisplayName = "comfyui_snacknodes"
Icon = "https://raw.githubusercontent.com/linksluckytime/comfyui_snacknodes/main/web/icon.png"