[project]
name = "snacknodes"
description = "A collection of ComfyUI nodes including Image Info (extract image details), Image Scaler (resize with padding), Text Box (multiline input), and Text Processor (concatenate/search-replace)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["# Core dependencies", "torch", "numpy", "pillow", "opencv-python-headless"]

[project.urls]
Repository = "https://github.com/linksluckytime/comfyui_snacknodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_snacknodes"
Icon = ""
